/start command response

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-telegram.bot.token = 1811803228:AAFBEMS554oWhfI1Zwt0KpLJE2cFJ-t3jQk
-telegram.bot.username = Event Manager Bot
+telegram.bot.token = 1824311325:AAHmqTkY9jkOvGe2vitKGjAVmE4-PD6HpUk
+telegram.bot.username = L-san Test Bot
