--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,9 @@ dependencies {
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    implementation platform('io.projectreactor:reactor-bom:2020.0.8')
+    implementation 'io.projectreactor:reactor-core'
 }
 
 test {
