mysql, entities and repositories

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
-spring.datasource.url=jdbc:postgresql://batyr.db.elephantsql.com:5432/yuokyonw
-spring.datasource.username=yuokyonw
-spring.datasource.password=
-
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database=postgresql
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://jekarus.ontando.ru:3306/event-manager
+spring.datasource.username=evgeniy
+spring.datasource.password=000000
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 telegram.bot.token = 1811803228:AAFBEMS554oWhfI1Zwt0KpLJE2cFJ-t3jQk
 telegram.bot.username = Event Manager Bot
