--- a/build.gradle
+++ b/build.gradle
@@ -28,9 +28,8 @@ dependencies {
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation group: 'org.springframework.statemachine', name: 'spring-statemachine-core', version: '2.2.0.RELEASE'
 
-    implementation platform('io.projectreactor:reactor-bom:2020.0.8')
-    implementation 'io.projectreactor:reactor-core'
 }
 
 test {
